# lync-telepathy

./: .gitignore  CMakeLists.txt  README.md  cm-wrapper.cpp  cm-wrapper.h  lync-telepathy.cpp  lync-telepathy.h  lync-telepathy.kdev4  main.cpp  protocols.cpp  protocols.h
.kdev4/: lync-telepathy.kdev4
tests/: CMakeLists.txt  lync-telepathyTest.cpp  lync-telepathyTest.h
